re PR target/11793 (ICE in extract_insn, at recog.c:2175 (const_vector's))

PR target/11793
       * config/rs6000/rs6000.h (LEGITIMATE_CONSTANT_P): Handle
       vectors.

From-SVN: r75974